-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
None
-
-
31d84ed73 (dev)
There are new namespace errors in qtbase (windows-11_23H2-llvm, clang):
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1747570416
Log:
https://testresults.qt.io/coin/api/log/qt/qtbase/eb6cf6a7346da0963e0d8821dac98f141154891c/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64Clangqtci-windows-11_23H2-x86_64-55-ac38dbSccache_UseConfigure/608847b95818b02a08b3ac287e2877a78ddd7df8/build_1747570426/log.txt.gz
C:/Users/qt/work/qt/qtbase/src/corelib/global/qassert.h:76:31: error: no member named 'qt_noop' in namespace 'TestNamespace'; did you mean simply 'qt_noop'?
And 30 other similar errors related to TestNamespace and qt_noop
- is duplicated by
-
QTBUG-137451 [REG] namespace build fails on 6.10.0
-
- Closed
-
- resulted from
-
QTQAINFRA-6540 Windows platforms are missing -qtnamespace builds
-
- Closed
-