qt_noop is not defined in the qt-namespace

Causes compilation errors when qt_noop is used, like from QT_THROW when
compiling without exceptions.

Amends 88f2d7aacb17119aebc701fbf10f9c89d4e9b79a

Fixes: QTBUG-137104
Change-Id: I377e278bd6a1b5a4a3b5a58d52d5205fb9545ec5
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>